2023-12-17_elm_sa_kubernetes/lab_snapshots/lab11.cyber-crypt.com/training/hello-elm/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-elm
spec:
  selector:
    app: hello-elm
  ports:
    - port: 80
      targetPort: http
