2023-12-17_elm_sa_kubernetes/lab_snapshots/lab11.cyber-crypt.com/training/hello-elm/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-elm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello-elm.jeddah11.sikademo.com
      secretName: hello-elm.jeddah11.sikademo.com-tls
  rules:
    - host: hello-elm.jeddah11.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-elm
                port:
                  number: 80
